# agentmesh

./: .gitignore  LICENSE  Makefile  README.md  index.html  package-lock.json  package.json  tsconfig.json
apps/studio-desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/studio-desktop/src-tauri/capabilities/: default.json
apps/studio-desktop/src-tauri/icons/: icon.icns
apps/studio-desktop/src-tauri/permissions/: desktop-preferences.toml
apps/studio-desktop/src-tauri/src/: lib.rs  main.rs
changelog/: 2026-05-13.md  2026-05-14.md  2026-05-15.md  2026-05-16.md  2026-05-17.md  2026-05-18.md  2026-05-19.md  2026-05-20.md  2026-05-21.md  2026-05-23.md  2026-05-24.md  2026-06-10.md  2026-06-11.md  2026-06-16.md  2026-06-22.md  2026-06-23.md  2026-07-15.md  2026-07-16.md  2026-07-17.md  2026-07-18.md  2026-07-19.md
docs/: python-decommission.md  roadmap.md
examples/: agentmesh.toml  fake-agent.sh
scripts/: check-boundaries.mjs  github-release-assets.mjs  github-release.mjs  publish-github-release.sh  publish-npm.sh  rewrite-package-imports.mjs
tests-node/: adapter-invocation.test.ts  adapter-plugin.test.ts  adapter-registry.test.ts  agent-registration.test.ts  call-history.test.ts  cli-surface.test.ts  config-layering.test.ts  core-contracts.test.ts  corrections.test.ts  decommission.test.ts  display-title.test.ts  flow-context.test.ts  flow-dispatch.test.ts  flow-preset-run.test.ts  flow-prompt.test.ts  flow-retry-resume.test.ts  flow-run.test.ts  generated-id.test.ts  github-release-assets.test.ts  management-cli.test.ts  mcp-client.test.ts  (+29 more)
(+223 files in other folders)
